Fixed overlapping flyer, wwd.html

--- a/styles/site.css
+++ b/styles/site.css
@@ -657,7 +657,7 @@ ol li {
   }
 
   #hsm-flyer {
-    width: 235%;
+    width: 220%;
   }
 }
 
